--- a/langchain-demo-ui/package.json
+++ b/langchain-demo-ui/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "langchain": "^0.0.170",
+    "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.6"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10",
